--- a/views/trips/new.hbs
+++ b/views/trips/new.hbs
@@ -1,30 +1,45 @@
-<h1>Create a new trip</h1>
 
-<form action="/trips/new" method="POST">
-    <div class="mb-3">
-      <label for="from" class="form-label">From</label>
-      <input type="text" name="from" id="from" class="form-control" placeholder="From City">
+
+<div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+     <h1 class="fs-25 mt-25">Create a New Trip</h1>
+    <div class="card border-0">
+      <div class="card-body">
+        <form action="/trips/new" method="POST">
+          <div class="mb-3">
+            <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i></span>
+                  <input type="from" name="from" class="form-control bg-body-secondary"
+                    placeholder="From">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-map-marker fa-fw" aria-hidden="true"></i></span>
+                  <input type="to" name="to" class="form-control bg-body-secondary"
+                    placeholder="To">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-money fa-fw" aria-hidden="true"></i></span>
+                  <input type="number" name="price" class="form-control bg-body-secondary"
+                    placeholder="Price">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-calendar fa-fw" aria-hidden="true"></i></span>
+                  <input type="date" name="date" class="form-control bg-body-secondary"
+                    placeholder="Date">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-car fa-fw" aria-hidden="true"></i></span>
+                  <input type="number" name="seats" class="form-control bg-body-secondary"
+                    placeholder="Seats">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-commenting fa-fw" aria-hidden="true"></i></span>
+                  <input type="text" name="comments" class="form-control bg-body-secondary"
+                    placeholder="Comments">
+              </div>
+                <button type="submit" class="login btn btn-primary rounded-pill text-white mb-5 border-0 fw-normal row justify-content-center">Create</button>
+        </form>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="to" class="form-label">To</label>
-      <input type="text" name="to" id="to" class="form-control" placeholder="Destiny City">
-    </div>
-    <div class="mb-3">
-      <label for="price" class="form-label">Price</label>
-      <input type="number" name="price" id="price" class="form-control" placeholder="Price">
-    </div>
-    <div class="mb-3">
-      <label for="date" class="form-label">Date</label>
-      <input type="date" name="date" id="date" class="form-control" placeholder="Date">
-      {{!-- min="{{mindate}}" --}}
-    </div>
-    <div class="mb-3">
-      <label for="seats" class="form-label">Seats</label>
-      <input type="number" name="seats" id="seats" class="form-control" placeholder="Seats">
-    </div>
-    <div class="mb-3">
-      <label for="comments" class="form-label">Comments</label>
-      <input type="text" name="comments" id="comments" class="form-control" placeholder="Comments">
-    </div>
-    <button type="submit" class="btn btn-primary">Create</button>
-</form>
+  </div>
+</div>
