--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,7 @@
 <body>
   {{>navbar}}
   {{{body}}}
+  {{>footer}}
 
   {{! Bootstrap Script }}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -33,5 +34,4 @@
     src="https://maps.googleapis.com/maps/api/js?key={{googleApiKey}}&libraries=places&callback=initGooglePlaces">
     </script>
 </body>
-
 </html>
