--- a/views/trips/noTrips.hbs
+++ b/views/trips/noTrips.hbs
@@ -1,8 +1,13 @@
 <img src="https://cdn.blablacar.com/kairos/assets/images/norides-6dc6fa2431cc3b7c0f3f..svg" alt="noTrip">
 
 
-<h1 class="sc-gswNZR sc-jIRcFI sc-hhOBVt kQcYu kHCrWL dUxoqJ">No rides yet. Drivers usually publish their ride 2-3 days
+  <div class="row mx-auto justify-content-center pt-25" style="width: 100%;">
+  <div class="col-12 col-md-4 row justify-content-center">
+    <h1 class="sc-gswNZR sc-jIRcFI sc-hhOBVt kQcYu kHCrWL dUxoqJ">No rides yet. Drivers usually publish their ride 2-3 days
   before departure.<br><span
     class="sc-gswNZR sc-gKPRtg kQcYu itioXH inline-block mt-xl inline-block mt-xl text-secondary">{{query.from}} -->
     {{query.to}}
   </span></h1>
+    <a class="publish btn btn-primary rounded-pill text-white mt-3 border-0 fw-normal" href="/">Go to the homepage</a>
+  <div>
+</div>
